# FTL-MV-Choice-Info

./: .gitignore  README.md  events.py  mvloc.config.jsonc  pyproject.toml  run.py  test.py
auxfiles-ko/data/: names.xml  text-zh-Hans.xml
auxfiles-ru/data/: text-ru.xml.append
auxfiles-zh_Hans/data/: text-zh-Hans.xml
auxfiles/data/: events_special_storage.xml.append  hyperspace.xml.append
output/data/: dlcEvents.xml.append  events.xml.append  events_sector_abandoned.xml.append  events_sector_asteroid.xml.append  events_sector_augmented.xml.append  events_sector_auto.xml.append  events_sector_clan.xml.append  events_sector_coalition.xml.append  events_sector_confederacy.xml.append  events_sector_droppoint.xml.append  events_sector_duskbringer.xml.append  events_sector_dynasty.xml.append  events_sector_empire.xml.append  events_sector_federation.xml.append  events_sector_freemantis.xml.append  events_sector_gathering.xml.append  events_sector_geniocracy.xml.append  events_sector_hacker.xml.append  events_sector_harmony.xml.append  events_sector_hektar.xml.append  events_sector_hive.xml.append  events_sector_innovation.xml.append  events_sector_jerry.xml.append  events_sector_kleptocracy.xml.append  events_sector_knight.xml.append  events_sector_lanius.xml.append  events_sector_laststand.xml.append  events_sector_lostsun.xml.append  events_sector_militia.xml.append  events_sector_ministry.xml.append  events_sector_monk.xml.append  events_sector_morph.xml.append  events_sector_nexus.xml.append  (+39 more)
scripts/: events.py  launch.py  loadevent.py  package.py  run.py
(+647 files in other folders)
