[tool.poetry]
name = "choice-info-mod"
version = "0.1.0"
description = ""
authors = ["ranhai613"]
packages = [{include = "choice_info_mod"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
mvlocscript = {git = "https://github.com/ftl-mv-translation/mvloc.git"}
treelib = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
